# NVIDIA-DOCA-App-Code-Sharing

./: .gitmodules  README.md
DOCA Acceleration/: Readme.md
data_center/src/: config.py  dpu.py  main.py
printer_client/src/: client.py
project_TCoffload/: README.md
project_TCoffload/FINAL_l2fwd/: A201  l2fwd.c  meson.build  tags
project_TCoffload/common/src/: dpdk_utils.c  dpdk_utils.h  dpi_worker.c  dpi_worker.h  flow_parser.c  flow_parser.h  gpu_init.c  offload_rules.c  offload_rules.h  sig_db.c  sig_db.h  telemetry.c  telemetry.h  utils.c  utils.h
project_TCoffload/common/src/grpc/: common.proto  log_forwarder.cc  log_forwarder.h
project_ceph_store_manage/: readme.md  readme_eng.md
project_dquant_on_the_fly/: explore-DPU-tutorial.ipynb  meson.build
project_dquant_on_the_fly/c/: cmdline_tool.c  comm_channel_endpoint.c  comm_channel_endpoint.h  common.c  common.h  router_service.c  router_service.h
project_dquant_on_the_fly/core/: DOCA_dist_fs.cpp  DOCA_dist_fs.h
project_dquant_on_the_fly/tools/: DOCA_dist_fs_host_admin_tool.c  doca-libs.pc  doca-libs.pc.bak  doca.pc  doca.pc.bak
project_mm/: Makefile  README.md
project_mm/comm_chann/: Makefile  cc_channel.c
project_mm/include/: cc_channel.h  config.h  dma_callback.h  dma_com.h  dma_func.h  mem_map.h  utils.h
project_mm/memory/: Makefile  dma_com.c  dma_func.c
project_mm/proxy_func/: Makefile  mem_map.c
project_virtio_fs/: readme.md
